[package]
name = "thorium_oxide"
version = "0.1.0"
authors = ["Noctoid <i@noctoid.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#wasm-pack = "0.9.1"
wasm-bindgen = "0.2.71"
#yew = "0.17.4"
#web-sys = "0.3.48"

[lib]
crate-type = ["cdylib", "rlib"]
